@@ -1,11 +1,13 @@
 package ru.arl.collection;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class ListsMain {
     public static void main(String[] args) {
-        final List<String> names = new ArrayList<>(List.of("Злата", "Тея"));
+
+        final List<String> names = Arrays.asList("Злата", "Тея");
         System.out.println(names);
 
         System.out.println(names.get(1));
